--- a/pro/practice.html
+++ b/pro/practice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
-    <link rel="stylesheet" href="/css/demo.css">
+    <link rel="stylesheet" href="pro/demo.css">
 </head>
 <body>
     <header>
